; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/calc/extr_rpn_mpfr.c_rpn_exec_int.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/calc/extr_rpn_mpfr.c_rpn_exec_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@MPFR_DEFAULT_RND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, %struct.TYPE_5__*, %struct.TYPE_5__*, i32 (i32, i32, i32)*)* @rpn_exec_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rpn_exec_int(%struct.TYPE_5__* %0, %struct.TYPE_5__* %1, %struct.TYPE_5__* %2, i32 (i32, i32, i32)* %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32 (i32, i32, i32)*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %7, align 8
  store i32 (i32, i32, i32)* %3, i32 (i32, i32, i32)** %8, align 8
  %11 = load i32, i32* %9, align 4
  %12 = call i32 @mpz_init(i32 %11)
  %13 = load i32, i32* %10, align 4
  %14 = call i32 @mpz_init(i32 %13)
  %15 = load i32, i32* %9, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @MPFR_DEFAULT_RND, align 4
  %20 = call i32 @mpfr_get_z(i32 %15, i32 %18, i32 %19)
  %21 = load i32, i32* %10, align 4
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @MPFR_DEFAULT_RND, align 4
  %26 = call i32 @mpfr_get_z(i32 %21, i32 %24, i32 %25)
  %27 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %8, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i32 %27(i32 %28, i32 %29, i32 %30)
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* @MPFR_DEFAULT_RND, align 4
  %37 = call i32 @mpfr_set_z(i32 %34, i32 %35, i32 %36)
  %38 = load i32, i32* %9, align 4
  %39 = call i32 @mpz_clear(i32 %38)
  %40 = load i32, i32* %10, align 4
  %41 = call i32 @mpz_clear(i32 %40)
  ret void
}

declare dso_local i32 @mpz_init(i32) #1

declare dso_local i32 @mpfr_get_z(i32, i32, i32) #1

declare dso_local i32 @mpfr_set_z(i32, i32, i32) #1

declare dso_local i32 @mpz_clear(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
